# keeyz

./: README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/macos/: common.rs  keyboard.rs  keyboard_listener.rs  keycodes.rs  mod.rs
src/components/: clicked-key.tsx  keys-list.tsx  modifiers.tsx
src/interfaces/: key.interface.ts  window.interface.ts
src/models/: key.ts
src/services/: keys.ts
src/stores/: keys.ts  modifiers.ts
