[package]
name = "Keeyz"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-cursor-position", "global-shortcut-all", "macos-private-api",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1.2"
rdev = "0.5.2"
# Listening events on MacOS (manual impl)
core-graphics = "0.23.1"
cocoa = "0.25"
core-foundation = "0.9.3"
core-foundation-sys = { version = "0.8.4" }
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
